# test_package_tsh

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb
.github/workflows/: py3-10.yml  py3-11.yml  py3-8.yml  py3-9.yml  python-package.yml  static.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  sub_pkg_1.rst  sub_pkg_2.rst  tutorials.rst
docs/source/_static/: custom.css
docs/source/tutorials/: tutorial_1.ipynb
src/test_package/: __init__.py
src/test_package/sub_pkg_1/: __init__.py  _sp1_module_1.py
src/test_package_tsh/sub_pkg_1/: __init__.py  _sp1_module_1.py  _sp1_module_2.py
src/test_package_tsh/sub_pkg_2/: __init__.py  _sp2_module_1.py
tests/: test_sub_pkg_1.py
