[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_package"
version = "0.1.0"
description = "A minimalistic Python project example"
readme = "README.md"
authors = [
    { name = "Patrick Hanel", email = "patrick_hanel@hotmail.com" }
]
maintainers = [
    { name = "Patrick Hanel", email = "patrick_hanel@hotmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"

[tool.sphinx]
project = "Test Package"
author = "Patrick Hanel"
version = "0.1.0"
