[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_package_tsh"
version = "0.1.0"
description = "A minimalistic Python project example"
readme = "README.md"
authors = [
    { name = "Patrick Hanel", email = "patrick.hanel@example.com" }
]
maintainers = [
    { name = "Patrick Hanel", email = "patrick.hanel@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/HAL9032/test_package_tsh"
Issues = "https://github.com/HAL9032/test_package_tsh/issues"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.sphinx]
project = "Test Package TSH"
author = "Patrick Hanel"
version = "0.1.0"
